Fix dropdown item alignment and Research active underline

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -38,7 +38,8 @@
     display: block;
 }
 
-.has-dropdown .dropdown li {
+.has-dropdown .dropdown li,
+.has-dropdown .dropdown li + li {
     margin: 0;
 }
 
